# invox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-and-release.yml
src/: main.py  utils.py  version.py
src/components/: __init__.py  buttons.py  dialogs.py  selectors.py
src/controllers/: __init__.py  database.py  router.py  updater.py
src/models/: __init__.py  tag.py  transaction.py
src/utils/: __init__.py  colors_map.py
src/views/: home_view.py
