[project]
name = "invox"
version = "0.1.0"
description = "An app for managing invoices and expenses"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "NextBale", email = "diegobalestra9@gmail.com" }]
dependencies = ["flet==0.28.3"]

[tool.flet]
org = "com.nextbale"
product = "invox"
company = "NextBale"
copyright = "Copyright (C) 2025 by NextBale"
app.path = "src"
