[project]
name = "invox"
dynamic = ["version"]
description = "An app for managing invoices and expenses"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "NextBale", email = "diegobalestra9@gmail.com" }]
dependencies = ["flet==0.28.3", "tinydb"]

[tool.flet]
org = "com.nextbale"
product = "invox"
company = "NextBale"
copyright = "Copyright (C) 2025 by NextBale"
app.path = "src"

[tool.setuptools.dynamic]
version = { attr = "version.VERSION" }
